# octopus-sensing

./: .appveyor.yml  .coveragerc  .editorconfig  .gitignore  .gitignore.swp  .travis.yml  Makefile  README.md  audio.py  config.py  eeg.py  gsr.py  main.py  main0.py  mkdocs.yml  mock.py  open-vibe-tagging.py  open_vibe_triger.py  open_vibe_triger0.py  open_vibe_trigger.py  pyproject.toml  questionnaire.py  video.py  windows.py
.github/workflows/: python-check.yml
Data Analysis/: .~lock.answer analysis.ods#  answer analysis.ods  answer%20analysis.ods_0.ods
OpenVibe/: display-save-eeg.xml
answers/: p-None-answers.csv
common/: message.py
devices/: device.py
devices/open_vibe/: open_vibe_streaming.py
devices/openbci/: openbci_streaming.py
devices/shimmer3/: shimmer3_streaming.py
devices/webcam/: webcam_streaming.py
docs/: Development.md  Tutorial.md  api-reference.md  api_reference.rst  conf.py  contribution.rst  development.md  development.rst  devices.md  index.md  index.rst  installation.rst  monitoring.rst  processing.rst  quick_start.rst  tutorial.md  tutorial.rst  visualizer.rst  visualizer_config_guide.rst
docs/api/: octopus_sensing.device_message_endpoint.rst  octopus_sensing.devices.rst  octopus_sensing.preprocessing.rst  octopus_sensing.questionnaire.rst  octopus_sensing.stimuli.rst  octopus_sensing.windows.rst
examples/: add_sensors.py  matlabRecorder.m  questionnaires.py  realtime_processing_test.py  send_market_to_remote_device.py  send_trigger_to_remote_device.py  simple_scenario.py  stimuli_loader.py  video_stimuli_example.py  watching_video_scenario.py
examples/audio_mode/: continuous_example.py  separated_example.py
examples/endpoint_example/: client_scenario.py  endpoint.py
examples/endpoint_unity_example/: endpoint.py  readme.md  requestController.cs
examples/full_scenario/: octopus_sensing_visualizer_config.conf  questionnaires.py  watching_video_scenario.py
examples/lsl_example/: keyboard_example.py  random_example.py  random_stream.py
examples/remote_device_example/: client.py  send_trigger_to_remote_device.py
examples/stimuli/: stimuli_ids.csv
examples/video_mode/: continuous_example.py  separated_example.py
examples/windows/: __init__.py  command_window.py  image_window.py  timer_window.py
images/other/: emotion.xcf
init_script/: init.sh  main.py
octopus_sensing/: __init__.py  config.py  device_coordinator.py  device_message_endpoint.py  monitoring_endpoint.py  play_video.sh  realtime_data_endpoint.py
octopus_sensing/OpenVibe/: csv2edf.xml  display-save-eeg-exp2.xml  display-save-eeg.xml
octopus_sensing/common/: endpoint_base.py  message.py  message_creators.py
octopus_sensing/devices/: __init__.py  audio_streaming.py  brainflow_openbci_streaming.py  brainflow_streaming.py  camera_streaming.py  common.py  device.py  lsl_streaming.py  monitored_device.py  open_vibe_streaming.py  openbci_streaming.py  realtime_data_device.py  shimmer3_streaming.py  skinos_streaming.py  streaming_base.py  testdevice_streaming.py  tobiiglasses_streaming.py
octopus_sensing/devices/audio/: audio_streaming.py
octopus_sensing/devices/camera/: __init__.py  camera_streaming.py
octopus_sensing/devices/network_devices/: http_device.py  socket_device.py
octopus_sensing/devices/open_vibe/: open_vibe_streaming.py
octopus_sensing/devices/openbci/: openbci_streaming.py
octopus_sensing/devices/shimmer3/: shimmer3_streaming.py
octopus_sensing/devices/webcam/: webcam_streaming.py
octopus_sensing/preprocessing/: __init__.py  audiovideo_split.py  openbci.py  openbci_brainflow.py  preprocess_devices.py  shimmer3.py  utils.py
octopus_sensing/questionnaire/: __init__.py  opinion_question.py  question.py  questionnaire.py  text_question.py
octopus_sensing/questionnaires/: __init__.py  my_questionnaire.py  sam_questionnaire.py
octopus_sensing/stimuli/: __init__.py  image_stimuli.py  image_stimulus.py  stimulus.py  video_stimuli.py  video_stimulus.py
octopus_sensing/tests/: __init__.py  integration.py  test_audio_streaming.py  test_brainflow_streaming.py  test_camera_streaming.py  test_device_coordinator.py  test_device_message_endpoint.py  test_helpers.py  test_http_network_device.py  test_integration.py  test_lsl_streaming.py  test_network_devices.py  test_octopus_sensing.py  test_preprocess.py  test_socket_network_device.py  test_testdevice_streaming.py  test_tobiiglasses_streaming.py
octopus_sensing/tests/data/preprocess_expected/OpenBCI_16_continuous/: OpenBCI-20-cont16-00.csv  OpenBCI-20-cont16-01.csv  OpenBCI-20-cont16-02.csv
octopus_sensing/tests/data/preprocess_expected/OpenBCI_16_sep/: OpenBCI-20-sep01.csv  OpenBCI-20-sep02.csv  OpenBCI-20-sep03.csv
octopus_sensing/tests/data/preprocess_expected/OpenBCI_8_continuous/: OpenBCI-20-cont8-00.csv  OpenBCI-20-cont8-01.csv  OpenBCI-20-cont8-02.csv
octopus_sensing/tests/data/preprocess_expected/OpenBCI_8_sep/: OpenBCI-20-sep8-01.csv  OpenBCI-20-sep8-02.csv  OpenBCI-20-sep8-03.csv
octopus_sensing/tests/data/preprocess_expected/Shimmer_continuous/: gsr-20-cont-00.csv  gsr-20-cont-01.csv  ppg-20-cont-00.csv  ppg-20-cont-02.csv
octopus_sensing/tests/data/preprocess_expected/Shimmer_sep/: gsr-20-sep03.csv.csv  ppg-20-sep01.csv.csv  ppg-20-sep03.csv.csv
octopus_sensing/tests/data/recorded/OpenBCI_16_continuous/: OpenBCI-20-cont16.csv
octopus_sensing/tests/data/recorded/OpenBCI_16_sep/: OpenBCI-20-sep01.csv  OpenBCI-20-sep02.csv  OpenBCI-20-sep03.csv
octopus_sensing/windows/: __init__.py  image_window.py  message_window.py  timer_window.py
paper/: paper.bib  paper.md
questionnaires/: sam_questionnaire.py
scripts/: get_devices_dependencies.py
sphinx_docs/: api_reference.rst  conf.py  index.rst  quick_start.rst
sphinx_docs/api/: octopus_sensing.common.rst  octopus_sensing.device_coordinator.rst  octopus_sensing.device_message_endpoint.rst  octopus_sensing.devices.rst  octopus_sensing.preprocessing.rst  octopus_sensing.questionnaire.rst  octopus_sensing.stimuli.rst  octopus_sensing.windows.rst
windows/: image_window.py  message_window.py
(+12 files in other folders)
