[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "octopus-sensing"
version = "4.1.0"
description = "Library for recording data synchronously from different physiological sensors"
authors = ["Nastaran Saffaryazdi <nsaffar@gmail.com>", "Aidin Gharibnavaz <aidin@aidinhut.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://octopus-sensing.nastaran-saffar.me"
repository = "https://github.com/octopus-sensing/octopus-sensing"
keywords = ["sensors", "eeg", "gsr", "recorder"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sounddevice = "^0.4.0"
scipy = "^1.5.2"
opencv-python = "^4.4.0"
# pyOpenBCI doesn't list its dependencies correctly.
# The followings are pyOpenBCI's dependencies.
pyOpenBCI = "^0.13"
pyserial = "^3.4"
requests = "^2.24.0"
xmltodict = "^0.12.0"
# bluepy is not needed by pyOpenBCI on other platforms (bluepy only supports Linux)
# bluepy = { version = "^1.3.0", markers = "sys_platform == 'linux'" }
bitstring = "^3.1.7"
# End of pyOpenBCI dependencies.
msgpack = "^1.0.0"
pandas = "^1.2.4"
mne = "^0.23.0"
heartpy = "^1.2.7"
# Pip cannot install PyGObject on Windows. Users need to install it manually themselves.
PyGObject = { version = "3.40.1", markers = "sys_platform != 'win32'" }
screeninfo = "^0.7"
miniaudio = "^1.45"
brainflow = "^4.6.1"
pylsl = "^1.16.2"
pydub = "^0.25.1"
mypy = "^1.13.0"
pytest = "^8.3.4"
setuptools = "^75.6.0"
numpy = "^1.21.0"
pyasyncore = "^1.0.4"
[tool.poetry.dev-dependencies]
pytest = "^8.3.4"
mypy = ">=1.13.0,<2.0.0"
coverage = "^6.2"
sphinx = "^4.3.0"
sphinx-rtd-theme = "^1.0.0"


[tool.autopep8]
max_line_length = 100


# sudo dpkg -i liblsl (download from https://github.com/sccn/liblsl/releases)

